--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,3 +25,23 @@
         @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px]
     }
 }
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        @apply w-full;
+    }
+
+    section {
+        @apply py-[35px];
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .heading {
+        @apply text-[26px] leading-[36px];
+    }
+
+    .text__para {
+        @apply py-[16px] leading-7 mt-3;
+    }
+}
