--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,26 @@
 body {
   font-family: "Manrope", sans-serif;
 }
+
+.sticky__header {
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  box-shadow: 3px 3px -8px 3px #ddd;
+}
+
+@media only screen and (max-width:1024px) {
+  .navigation{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background: #00000084;
+  }
+}
