--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,10 @@
     .text__para{
         @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px]
     }
+
+    .header{
+        @apply bg-[url('./assets/images/mask.png')] bg-no-repeat bg-center bg-cover w-full h-[100px];
+    }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -44,4 +48,5 @@
     .text__para {
         @apply py-[16px] leading-7 mt-3;
     }
+
 }
