app css modified

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,3 +32,11 @@ body {
     background: #00000084;
   }
 }
+
+.menu {
+  width: 15rem;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
