--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,7 +21,7 @@ body {
   box-shadow: 3px 3px -8px 3px #ddd;
 }
 
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width: 768px) {
   .navigation{
     width: 100%;
     height: 100%;
@@ -30,19 +30,27 @@ body {
     left: 0;
     z-index: 100;
     background: #00000084;
+    display: none;
+  }
+
+  .menu {
+    width: 15rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #fff;
+    z-index: 200;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 30px;
+  }
+
+  .show__menu{
+    display: block;
   }
 }
 
-.menu {
-  width: 15rem;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: #fff;
-  z-index: 200;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  line-height: 30px;
-}
+
+
