--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,14 @@ body {
   font-family: "Manrope", sans-serif;
 }
 
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  border: 1px solid #181a1e;
+  opacity: 100%;
+  background: #fff;
+}
+
 .sticky__header {
   width: 100%;
   height: 80px;
