--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,17 @@ body {
   background: #fff;
 }
 
+.swiper-pagination-bullet-active {
+  background: #0067ff;
+  border: none;
+}
+
+.swiper {
+  padding-top: 70px;
+  border-radius: 12px;
+  box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3);
+}
+
 .sticky__header {
   width: 100%;
   height: 80px;
