--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,7 +24,11 @@ body {
 }
 
 .swiper {
-  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+.swiper-slide.swiper-slide-next{
+  background: #0067ff;
   border-radius: 12px;
   box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3);
 }
