--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,7 @@ body {
 }
 
 .swiper-slide.swiper-slide-next{
-  background: #0067ff;
+  background: #92bcfb;
   border-radius: 12px;
   box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3);
 }
