--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,9 +28,17 @@ body {
 }
 
 .swiper-slide.swiper-slide-next{
-  background: #92bcfb;
+  background: #79acf7;
   border-radius: 12px;
   box-shadow: 0px 20px 70px rgba(0, 103, 255, 0.3);
+}
+
+.swiper-slide.swiper-slide-next h4, .swiper-slide.swiper-slide-next p{
+  color: #fff;
+}
+
+.swiper-pagination {
+  top: 90%;
 }
 
 .sticky__header {
